force-app/main/default/objects/refedge__Reference_Basic_Information__c/refedge__Reference_Basic_Information__c.object-meta.xml
<CustomObject>
    <description>Basic Information for Account &amp; Contact(Bound 5)</description>
    <label>Reference Profile</label>
    <nameField>
        <displayFormat>RBI-{00000}</displayFormat>
        <label>Reference Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>