force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/Last_Gift_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Gift_Sent__c</fullName>
    <label>(CM) Last Gift Sent</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>