force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__Inactivated_Through_Account__c.field-meta.xml
<CustomField>
    <fullName>refedge__Inactivated_Through_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to identify which contacts got inactivated when the account got inactivated</description>
    <label>Inactivated Through Account</label>
    <type>Checkbox</type>
</CustomField>