force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__RUL_Activities_available__c.field-meta.xml
<CustomField>
    <fullName>refedge__RUL_Activities_available__c</fullName>
    <formula>refedge__RUL_Activities_will_do__c -  refedge__RUL_Activities_used__c</formula>
    <inlineHelpText>The Available Uses is the difference between the Uses per Time Period and Completed uses.</inlineHelpText>
    <label>Available Uses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>