force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__RUL_Activities_will_do__c.field-meta.xml
<CustomField>
    <fullName>refedge__RUL_Activities_will_do__c</fullName>
    <inlineHelpText>The Uses per Time Period is the number of reference uses available during the Time Period (e.g., 2 uses in 60 days where 2 is the Uses per Time Period).</inlineHelpText>
    <label>Uses per Time Period</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>