force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/refedge__RUL_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>refedge__RUL_Last_Activity_Date__c</fullName>
    <inlineHelpText>The Last Use Date is the last date the Account or Contact was used for a reference activity.</inlineHelpText>
    <label>Last Use Date</label>
    <type>Date</type>
</CustomField>