force-app/main/default/objects/refedge__Reference_Basic_Information__c/fields/Speaker_Quality__c.field-meta.xml
<CustomField>
    <fullName>Speaker_Quality__c</fullName>
    <label>(CM) Speaker Quality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>