force-app/main/default/objects/refedge__Reference_Basic_Information__c/validationRules/refedge__VR_Checkfor_IsReferenceable.validationRule-meta.xml
<ValidationRule>
    <fullName>refedge__VR_Checkfor_IsReferenceable</fullName>
    <active>true</active>
    <description>You must select a &apos;Reference Status&apos; if &apos;Reference Program Member&apos; checkbox is selected.</description>
    <errorConditionFormula>AND(refedge__Is_Referenceable__c = true, ISPICKVAL(refedge__Referenceability_Status__c, &apos;&apos;))</errorConditionFormula>
    <errorMessage>You must select a &apos;Reference Status&apos; if &apos;Reference Program Member&apos; checkbox is selected.</errorMessage>
</ValidationRule>