force-app/main/default/objects/refedge__Reference_Basic_Information__c/validationRules/refedge__VR_Checkfor_ReferenceabilityStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>refedge__VR_Checkfor_ReferenceabilityStatus</fullName>
    <active>true</active>
    <description>You must select &apos;Reference Program Member&apos; checkbox if &apos;Reference Status&apos; is &apos;Active&apos; or &apos;Caution&apos;.</description>
    <errorConditionFormula>AND(
OR(ISPICKVAL(refedge__Referenceability_Status__c, &apos;Active&apos;), ISPICKVAL(refedge__Referenceability_Status__c, &apos;Caution&apos;)) ,
refedge__Is_Referenceable__c = false
)</errorConditionFormula>
    <errorMessage>You must select &apos;Reference Program Member&apos; checkbox if &apos;Reference Status&apos; is &apos;Active&apos; or &apos;Caution&apos;.</errorMessage>
</ValidationRule>