force-app/main/default/objects/refedge__Reference_Basic_Information__c/validationRules/refedge__VR_Checkfor_UsesPerTimePeriod.validationRule-meta.xml
<ValidationRule>
    <fullName>refedge__VR_Checkfor_UsesPerTimePeriod</fullName>
    <active>true</active>
    <description>If &apos;Uses Per Time Period&apos; is set then &apos;Time Period&apos; MUST also be set.</description>
    <errorConditionFormula>AND(NOT(ISNULL(refedge__RUL_Activities_will_do__c)),
ISNULL(refedge__RUL_Period__c))</errorConditionFormula>
    <errorMessage>If &apos;Uses Per Time Period&apos; is set then &apos;Time Period&apos; MUST also be set.</errorMessage>
</ValidationRule>