force-app/main/default/objects/refedge__Reference_Basic_Information__c/validationRules/refedge__VR_RUL_Activites.validationRule-meta.xml
<ValidationRule>
    <fullName>refedge__VR_RUL_Activites</fullName>
    <active>true</active>
    <description>You must specify &apos;Uses per Time Period&apos; in the period from 1 to 99</description>
    <errorConditionFormula>( refedge__RUL_Activities_will_do__c  &gt; 99) || (refedge__RUL_Activities_will_do__c &lt; 1)</errorConditionFormula>
    <errorMessage>You must specify &apos;Uses per Time Period&apos; in the period from 1 to 99</errorMessage>
</ValidationRule>