force-app/main/default/objects/refedge__Reference_Basic_Information__c/validationRules/refedge__VR_RUL_Period.validationRule-meta.xml
<ValidationRule>
    <fullName>refedge__VR_RUL_Period</fullName>
    <active>true</active>
    <description>You must specify &apos;Time Period&apos; in the period from 1 to 365</description>
    <errorConditionFormula>(refedge__RUL_Period__c &gt; 365) ||(refedge__RUL_Period__c &lt; 1)</errorConditionFormula>
    <errorMessage>You must specify &apos;Time Period&apos; in the period from 1 to 365</errorMessage>
</ValidationRule>