force-app/main/default/objects/refedge__Reference_Basic_Information__c/listViews/refedge__Account_Reward_Summaries.listView-meta.xml
<ListView>
    <fullName>refedge__Account_Reward_Summaries</fullName>
    <columns>NAME</columns>
    <columns>refedge__Account__c</columns>
    <columns>refedge__Current_Available_Balance_Points__c</columns>
    <columns>refedge__Lifetime_Points__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>refedge__Is_Referenceable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>refedge__Contact__c</field>
        <operation>equals</operation>
    </filters>
    <label>Account Reward Summaries</label>
</ListView>