force-app/main/default/objects/refedge__Reference_Basic_Information__c/listViews/refedge__All.listView-meta.xml
<ListView>
    <fullName>refedge__All</fullName>
    <columns>NAME</columns>
    <columns>refedge__Account__c</columns>
    <columns>refedge__Contact__c</columns>
    <columns>refedge__Attributes__c</columns>
    <columns>refedge__Referenceability__c</columns>
    <columns>refedge__Reference_Program_Candidate__c</columns>
    <columns>refedge__Is_Referenceable__c</columns>
    <columns>refedge__Referenceability_Status__c</columns>
    <columns>refedge__Parent_Attributes__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>