force-app/main/default/objects/refedge__Reference_Basic_Information__c/listViews/refedge__Managed_Reference_Accounts.listView-meta.xml
<ListView>
    <fullName>refedge__Managed_Reference_Accounts</fullName>
    <columns>NAME</columns>
    <columns>refedge__Account__c</columns>
    <columns>refedge__Reference_Owner__c</columns>
    <columns>refedge__Referenceability_Status__c</columns>
    <columns>refedge__Referenceability__c</columns>
    <columns>refedge__RUL_Last_Activity_Date__c</columns>
    <columns>refedge__Total_Reference_Use__c</columns>
    <columns>refedge__RUL_Limit_Reached__c</columns>
    <columns>refedge__RUL_Date_Available__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>refedge__Managed_Reference_Account__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Managed Reference Accounts</label>
</ListView>