force-app/main/default/objects/refedge__Reference_Basic_Information__c/listViews/refedge__Peer2Peer_Reference_Accounts.listView-meta.xml
<ListView>
    <fullName>refedge__Peer2Peer_Reference_Accounts</fullName>
    <columns>NAME</columns>
    <columns>refedge__Account__c</columns>
    <columns>refedge__Reference_Owner__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>refedge__Referenceability_Status__c</columns>
    <columns>refedge__Referenceability__c</columns>
    <columns>refedge__RUL_Limit_Reached__c</columns>
    <columns>refedge__RUL_Date_Available__c</columns>
    <columns>refedge__Total_Reference_Use__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>refedge__Is_Referenceable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>refedge__Contact__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>refedge__Managed_Reference_Account__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Peer2Peer Reference Accounts</label>
    <language>en_US</language>
</ListView>