force-app/main/default/objects/refedge__Reference_Basic_Information__c/listViews/refedge__Reference_Accounts.listView-meta.xml
<ListView>
    <fullName>refedge__Reference_Accounts</fullName>
    <columns>NAME</columns>
    <columns>refedge__Account__c</columns>
    <columns>refedge__Is_Referenceable__c</columns>
    <columns>refedge__Reference_Owner__c</columns>
    <columns>refedge__Managed_Reference_Account__c</columns>
    <columns>refedge__RUL_Last_Activity_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>refedge__Contact__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>refedge__Is_Referenceable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Reference Accounts</label>
</ListView>