force-app/main/default/objects/refedge__Reference_Basic_Information__c/listViews/refedge__Reference_Accounts_Limit_Reached.listView-meta.xml
<ListView>
    <fullName>refedge__Reference_Accounts_Limit_Reached</fullName>
    <columns>NAME</columns>
    <columns>refedge__Account__c</columns>
    <columns>refedge__RUL_Activities_used__c</columns>
    <columns>refedge__RUL_Activities_available__c</columns>
    <columns>refedge__RUL_Last_Activity_Date__c</columns>
    <columns>refedge__RUL_Date_Available__c</columns>
    <columns>refedge__RUL_Limit_Reached__c</columns>
    <columns>refedge__RUL_Period__c</columns>
    <columns>refedge__RUL_Activities_will_do__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>refedge__Reference_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>refedge__Contact__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>refedge__RUL_Limit_Reached__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Reference Accounts, Limit Reached</label>
</ListView>