force-app/main/default/objects/refedge__Reference_Basic_Information__c/listViews/refedge__Reference_Contacts.listView-meta.xml
<ListView>
    <fullName>refedge__Reference_Contacts</fullName>
    <columns>NAME</columns>
    <columns>refedge__Contact__c</columns>
    <columns>refedge__Account__c</columns>
    <columns>refedge__Referenceability_Status__c</columns>
    <columns>refedge__Reference_Owner__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>refedge__RUL_Limit_Reached__c</columns>
    <columns>refedge__RUL_Date_Available__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>refedge__Is_Referenceable__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>refedge__Contact__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Reference Contacts</label>
</ListView>