force-app/main/default/objects/refedge__Reference_Basic_Information__c/listViews/refedge__Reference_Program_Candidates.listView-meta.xml
<ListView>
    <fullName>refedge__Reference_Program_Candidates</fullName>
    <columns>NAME</columns>
    <columns>refedge__Account__c</columns>
    <columns>refedge__Contact__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>refedge__Reference_Program_Candidate__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Reference Program Candidates</label>
</ListView>